2015-06-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-warnings.m4: Warning flags for gcc 5.x.
	* kpse-web2c.m4: Better handling of --disable-mf-nowin.
	* kpse-common.m4: Check if <ctype.h> declares isascii.
	* kpse-setup.m4: MFLuaJIT requires LuaJIT.
	* kpse-poppler-flags.m4: LuaTeX requires poppler 0.30 or better.

2015-03-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-web2c.m4: Add KPSE_WITH_XMF and KPSE_XMF_COND.

2015-03-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-graphite2-flags.m4: Does not depend on other libraries.
	* kpse-icu-flags.m4: Drop handling of a historic bug from V4.4.

2015-03-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-{kpathsea,ptexenc}-flags.m4: Use pkg-config.
	* kpse-common.m4 (_KPSE_PKG_CONFIG_FLAGS): Common code.

2015-03-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-common.m4 (KPSE_COMMON): Drop checks for strcasecmp,
	strtol, and strstr.

2015-03-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-win32.m4: Define KPSE_DO_IF_WIN32 for WIN32 only tests.

2015-02-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-cairo-flags.m4: Require KPSE_PIXMAN_FLAGS.
	* kpse-poppler-flags.m4: Require KPSE_ZLIB_FLAGS.
	* kpse-teckit-flags.m4: Use pkg-config.

2015-02-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4 (kpse_texk_pkgs): Add musixtnt.

2015-01-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-setup.m4: Disable LuaJITTeX for powerpc-*-darwin*.

2014-12-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4 (kpse_texk_pkgs): Move lacheck from here ...
	(kpse_utils_pkgs): ... to here.

2014-12-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4 (kpse_texk_pkgs): Move devnag from here ...
	(kpse_utils_pkgs): ... to here.

2014-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4 (kpse_texk_pkgs): Rename ps2pkm => ps2pk.

2014-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-options.m4: Set platform name to ${host_alias-$host}.
