@@ -1,3 +1,8 @@
+2015-08-13  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* kpse-setup.m4: Allow shared libraries (DLLs) in native TeXLive
+	builds for Cygwin and MinGW.
+
 2015-06-12  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* kpse-warnings.m4: Warning flags for gcc 5.x.
